--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,11 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 9.0.x
+    
+    - name: Install required workloads
+      run: |
+        dotnet workload install maui
+        dotnet workload install maui-tizen
 
     - name: Install Android SDK (for Android builds)
       if: ${{ matrix.target == 'net9.0-android' }}
